[add] 기존 코드로 변경

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,7 +5,7 @@
     android:id="@+id/main_layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MainActivity">
+    tools:context="kr.co.partnersclub.MainActivity">
 
     <WebView
         android:id="@+id/webview"
@@ -62,13 +62,13 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_horizontal"
-                android:layout_marginLeft="15dp"
                 android:layout_marginTop="5dp"
-                android:background="@drawable/roounded"
+                android:layout_marginLeft="15dp"
                 android:text=""
-                android:textColor="#ffffff"
+                android:visibility="invisible"
                 android:textSize="12dip"
-                android:visibility="invisible" />
+                android:textColor="#ffffff"
+                android:background="@drawable/roounded"/>
         </FrameLayout>
         <Button
             android:id="@+id/action_menu"
